--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent"
-	tools:context = ".ui.MainActivity">
+	>
 
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/recycler"
-		android:layout_width = "match_parent"
-		android:layout_height = "match_parent"
-		app:layout_constraintBottom_toBottomOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"/>
-
-	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/floatButton"
-		android:layout_width = "wrap_content"
-		android:layout_height = "wrap_content"
-		android:src="@android:drawable/ic_input_add"
-		app:layout_constraintRight_toRightOf="parent"
+	<androidx.viewpager.widget.ViewPager
+		android:id="@+id/pager"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_margin="16dp"
-	/>
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+	<com.google.android.material.bottomappbar.BottomAppBar
+		android:id="@+id/bar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		style="@style/Widget.MaterialComponents.BottomAppBar"
+		android:layout_gravity="bottom"
+		app:backgroundTint="@color/colorPrimary"
+		app:navigationIcon="@android:drawable/ic_menu_add"/>
+
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/fab"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@android:drawable/ic_menu_add"
+		app:backgroundTint="@color/colorAccent"
+		app:maxImageSize="32dp"
+		app:layout_anchor="@id/bar"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
