--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:tools = "http://schemas.android.com/tools"
@@ -8,7 +8,7 @@
 	tools:context = ".ui.SecondActivity">
 
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/input_name"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -20,16 +20,16 @@
 		app:layout_constraintRight_toRightOf="parent"
 	>
 
-		<android.support.design.widget.TextInputEditText
+		<com.google.android.material.textfield.TextInputEditText
 			android:id = "@+id/edit_name"
 			android:layout_width = "match_parent"
 			android:layout_height = "wrap_content"
 			android:hint = "@string/name"
 			android:imeOptions = "actionNext"
 			android:singleLine = "true"/>
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/input_description"
 		android:layout_width = "0dp"
 		android:layout_height = "wrap_content"
@@ -41,14 +41,14 @@
 		app:layout_constraintRight_toRightOf="parent"
 	>
 
-		<android.support.design.widget.TextInputEditText
+		<com.google.android.material.textfield.TextInputEditText
 			android:id = "@+id/edit_description"
 			android:layout_width = "match_parent"
 			android:layout_height = "wrap_content"
 			android:hint = "@string/description"
 			android:imeOptions = "actionDone"
 			android:singleLine = "true"/>
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
 	<RadioGroup
 		android:id="@+id/radioGroup"
@@ -98,13 +98,12 @@
 			android:layout_weight="0.33" />
 	</RadioGroup>
 
-	<android.support.constraint.ConstraintLayout
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		android:orientation="vertical"
 		android:layout_margin="15dp"
 		android:padding="15dp"
-		android:background="@xml/layout_shape"
 		app:layout_constraintTop_toBottomOf="@id/radioGroup"
 		tools:ignore = "MissingConstraints">
 
@@ -136,19 +135,19 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 		/>
 
-	</android.support.constraint.ConstraintLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 
-	<android.support.design.widget.FloatingActionButton
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id = "@+id/floatingSecondButton"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:layout_marginBottom = "16dp"
 		android:layout_marginEnd = "16dp"
-		android:clickable = "true"
 		app:layout_constraintBottom_toBottomOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent"
 		app:srcCompat = "@android:drawable/ic_menu_save"
+		app:backgroundTint="@color/colorAccent"
 		app:maxImageSize="32dp"
-		android:focusable = "true"/>
+		android:focusable = "false"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
