--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	android:id="@+id/root"
 	xmlns:android = "http://schemas.android.com/apk/res/android"
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
 	android:layout_height = "wrap_content"
-	android:orientation="vertical"
-	android:layout_margin="10dp"
-	tools:context = ".ui.MainActivity">
+	>
+
+	<androidx.cardview.widget.CardView
+		xmlns:card_view="http://schemas.android.com/apk/res-auto"
+		android:id="@+id/card_view"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		card_view:cardBackgroundColor="#CCC"
+		card_view:cardCornerRadius="10dp"
+		card_view:cardElevation="8dp"
+		card_view:cardUseCompatPadding="true">
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width = "match_parent"
+			android:layout_height = "wrap_content"
+			>
 
 		<ImageView
 			android:id="@+id/image"
@@ -47,7 +61,6 @@
 			android:singleLine="true"
 			android:layout_margin="10dp"
 			android:padding="5dp"
-			android:background="@xml/edittext_shape"
 			app:layout_constraintTop_toBottomOf="@id/textNameTitle"
 			app:layout_constraintLeft_toRightOf="@+id/image"
 			app:layout_constraintRight_toRightOf="parent"
@@ -76,10 +89,14 @@
 			android:maxLines="2"
 			android:minLines="2"
 			android:padding="5dp"
-			android:background="@xml/edittext_shape"
 			app:layout_constraintTop_toBottomOf="@+id/textDescriptionTitle"
 			app:layout_constraintLeft_toRightOf="@+id/image"
 			app:layout_constraintRight_toRightOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 		/>
-</android.support.constraint.ConstraintLayout>
+
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
+	</androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
